--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="/src/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite App</title>
-    <script type="module" crossorigin src="/pok-github-page/assets/index.7f4941d7.js"></script>
+    <script type="module" crossorigin src="/Neko-DJL/index.Poke.js"></script>
     <link rel="stylesheet" href="/pok-github-page/assets/index.f72a9dfc.css">
   </head>
   <body>
