--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/src/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite App</title>
+    <title>Poke App</title>
     <script type="module" crossorigin src="/Neko-DJL/index.Poke.js"></script>
    <link rel="stylesheet" href="/pok-github-page/assets/index.bd741460.css">
   </head>
