--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <link rel="icon" type="image/svg+xml" href="/src/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Poke App</title>
-    <script type="module" crossorigin src="/Neko-DJL/index.Poke.js"></script>
+    <script type="module" crossorigin src="/pok-github-page/assets/index.0f4a77ee.js"></script>
+    <link rel="stylesheet" href="/pok-github-page/assets/index.bd741460.css">
   </head>
   <body>
     <div id="root"></div>
