--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Poke App</title>
     <script type="module" crossorigin src="/Neko-DJL/index.Poke2.js"></script>
-    <link rel="stylesheet" href="/pok-github-page/assets/index.Neko.css">
+    <link rel="stylesheet" href="/Neko-DJL/index.Neko.css">
   </head>
   <body>
     <div id="root"></div>
